[package]
name = "http2socks"
version = "0.1.0"
edition = "2021"
description = "A simple HTTP to SOCKS5 proxy bridge"

[dependencies]
thiserror = "1.0"
tokio = { version = "1.28", features = ["io-util", "net", "rt", "macros"] }
clap = { version = "4.3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
